bumped version for dependencies